--- a/package.json
+++ b/package.json
@@ -17,14 +17,6 @@
     "test": "craco test"
   },
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "ytdl-core": "^2.1.0",
-    "franc": "^5.0.0",
-    "string-similarity": "^4.0.1",
-    "user-agents": "^1.0.547",
-    "xml2js": "^0.4.23",
     "@craco/craco": "^5.6.4",
     "@electron-forge/cli": "6.0.0-beta.50",
     "@electron-forge/maker-deb": "6.0.0-beta.50",
@@ -44,6 +36,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.1.0",
     "debug": "^4.1.1",
     "electron": "^8.2.0",
@@ -52,6 +45,8 @@
     "electron-store": "^5.1.1",
     "ffbinaries": "^1.1.4",
     "fluent-ffmpeg": "^2.1.2",
+    "franc": "^5.0.0",
+    "jest": "^25.4.0",
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.3",
     "needle": "^2.3.3",
@@ -61,15 +56,21 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "rollbar": "^2.15.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "string-similarity": "^4.0.1",
     "tailwindcss": "^1.2.0",
     "typescript": "~3.7.2",
     "universal-analytics": "^0.4.20",
     "update-electron-app": "^1.5.0",
+    "user-agents": "^1.0.547",
     "uuid": "^7.0.2",
-    "webpack-filter-warnings-plugin": "^1.2.1"
+    "webpack-filter-warnings-plugin": "^1.2.1",
+    "xml2js": "^0.4.23",
+    "ytdl-core": "^2.1.0"
   },
   "keywords": [
     "karaoke"
