--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "adm-zip": "^0.4.14",
     "async-graph-resolver": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.1.0",
@@ -45,7 +46,6 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^5.1.1",
     "execa": "^4.0.0",
-    "ffbinaries": "^1.1.4",
     "fluent-ffmpeg": "^2.1.2",
     "franc": "^5.0.0",
     "jest": "^24.9.0",
