--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "adm-zip": "^0.4.14",
+    "arch": "^2.1.2",
     "async-graph-resolver": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.1.0",
