--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,13 +20,6 @@ install:
   - ps: Install-Product node $env:nodejs_version $env:platform
   - set PATH=%APPDATA%\npm;%PATH%
   - npm install
-  - npm update
-
-test_script:
-  - node --version
-  - npm --version
-  - npm run lint
-  - if %APPVEYOR_REPO_TAG% EQU false npm run make
 
 build_script:
-  - IF %APPVEYOR_REPO_TAG% EQU true npm run publish
+  - npm run publish
