--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,5 +22,5 @@ install:
   - npm install
 
 build_script:
-  - echo %WINDOWS_CERTIFICATE_FILE% | base64.exe --decode > cert.pfx
+  - echo %WINDOWS_CERTIFICATE_FILE% | base64.exe -di > cert.pfx
   - npm run publish
