--- a/package.json
+++ b/package.json
@@ -40,17 +40,20 @@
     "async-graph-resolver": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.1.0",
+    "copy-webpack-plugin": "^6.0.1",
     "debug": "^4.1.1",
     "electron": "^8.2.0",
     "electron-rebuild": "^1.10.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^5.1.1",
     "execa": "^4.0.0",
+    "file-loader": "^6.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "franc": "^5.0.0",
     "he": "^1.2.0",
     "iconv-lite": "git+https://github.com/youkaclub/iconv-lite.git",
     "jest": "^24.9.0",
+    "libass-wasm": "^4.0.0",
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.3",
     "needle": "^2.3.3",
