--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "adm-zip": "^0.4.14",
+    "amplitude-js": "^6.1.0-debug-cookie.1",
     "arch": "^2.1.2",
     "async-graph-resolver": "^1.0.1",
     "check-disk-space": "^2.1.0",
