--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.50",
     "@electron-forge/publisher-github": "^6.0.0-beta.50",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@react-hook/window-size": "^2.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
