--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "electron-store": "^5.1.1",
     "execa": "^4.0.0",
     "file-loader": "^6.0.0",
+    "filenamify": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "franc": "^5.0.0",
     "he": "^1.2.0",
