start scripts for development on Windows
also add electron-debug module for easy access to
dev tools

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "karaoke for any song in any language",
   "version": "1.0.0",
   "author": "Youka",
-  "main": ".webpack/main",
+  "main": "src/main.js",
   "repository": "https://github.com/youkaclub/youka-desktop",
   "homepage": "https://app.youka.club",
   "scripts": {
     "start": "concurrently \"BROWSER=none craco start\" \"YOUKA_APP_URL=http://localhost:3000 electron src/main.js\"",
+    "start:windows": "concurrently \".\\scripts\\server.cmd\" \".\\scripts\\electron.cmd\"",
     "build": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` craco build",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -47,6 +48,7 @@
     "copy-webpack-plugin": "^6.0.1",
     "debug": "^4.1.1",
     "electron": "^8.2.0",
+    "electron-debug": "^3.1.0",
     "electron-rebuild": "^1.10.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^5.1.1",
