--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.0",
     "@types/mkdirp": "^1.0.1",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
