update start scripts

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "youka",
   "productName": "Youka",
-  "description": "karaoke for any song in any language",
+  "description": "The Best Karaoke Maker",
   "version": "1.0.0",
   "author": "Youka",
-  "main": "src/main.js",
+  "main": ".webpack/main",
   "repository": "https://github.com/youkaclub/youka-desktop",
   "homepage": "https://app.youka.club",
   "scripts": {
     "start": "concurrently \"BROWSER=none craco start\" \"YOUKA_APP_URL=http://localhost:3000 electron src/main.js\"",
-    "start:windows": "concurrently \".\\scripts\\server.cmd\" \".\\scripts\\electron.cmd\"",
+    "start:windows": "concurrently \".\\scripts\\react.cmd\" \".\\scripts\\electron.cmd\"",
+    "dev": "concurrently \"BROWSER=none NODE_ENV=youka craco start\" \"YOUKA_APP_URL=http://localhost:3000 electron src/main.js\"",
     "build": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` craco build",
     "package": "electron-forge package",
     "make": "electron-forge make",
