--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.0",
+    "@types/mkdirp": "^1.0.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/request-promise": "^4.1.46",
     "adm-zip": "^0.4.14",
     "amplitude-js": "^6.1.0-debug-cookie.1",
     "arch": "^2.1.2",
