--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.0",
-    "@types/mkdirp": "^1.0.1",
     "@types/lodash": "^4.14.157",
+    "@types/mkdirp": "^1.0.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -57,6 +57,7 @@
     "electron-rebuild": "^1.10.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^5.1.1",
+    "eventemitter3": "^4.0.4",
     "execa": "^4.0.0",
     "file-loader": "^6.0.0",
     "filenamify": "^4.1.0",
@@ -122,7 +123,5 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   },
-  "dependencies": {
-    "eventemitter3": "^4.0.4"
-  }
+  "dependencies": {}
 }
